<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools" tools:locale="he">

    <!-- welcome -->
    <string name="welcome">ברוכים הבאים ל-</string>
    <string name="welcome_user">שלום </string>
    <string name="hello_world">שלום שלום!</string>

    <!-- button -->
    <string name="action_search">חיפוש</string>
    <string name="info">מי אנחנו</string>
    <string name="log_in">התחברות</string>
    <string name="action_settings">הגדרות</string>
    <string name="help">עזרה</string>

    <!-- labels -->
    <string name="user_name">תעודת זהות</string>
    <string name="password">סיסמה</string>
    <string name="patient_name">מטופל</string>
    <string name="theory">רקע תאורטי</string>
    <string name="exercise">תרגילים</string>
    <string name="welcome_voiceHygiene"></string>
    <string name="action_logout">התנתק</string>
    <string name="action_exit">יציאה</string>
    <string name="title_activity_exercises">תרגילים</string>
    <string name="title_activity_theorical_background">רקע תאורטי</string>
    <string name="title_activity_voice_hygiene">הגיינה קולית</string>
    <string name="description_voice_hygiene">הקול מופק באמצעות זרם אוויר העובר דרך מעבר צר (המיתרים) בו נוצרים  גלי קול שנכנסים לחללי התהודה, באמצעות מספר מערכות. היום נלמד על מערכת ההגייה – פה (לשון, שפתיים, שיניים, חיך, וילון, אף) : ההיגוי מאפשר להפוך את הקול לדיבור ומילים. </string>
    <string name="pdfList_description_voiceHygiene">להלן רשימת משימות עליכם לבצע:</string>

    <!-- title -->
    <string name="title_activity_login">עמוד התחברות</string>
    <string name="title_activity_patient">עמוד מטופל</string>

    <!-- english -->
    <string name="quotation" translatable="false">Find your voice and inspire others to find theirs. (Stephen Covey)</string>
    <string name="voice_hygiene">הגיינה קולית</string>
    <string name="pdf_title_voice_hygiene">רשימת משימות</string>
    <string name="description_pdf_voice_hygiene">להלן רשימת משימות שעליך לבצע:</string>
    <string name="title_notification_voice_hygiene">התראות</string>
    <string name="description_notification_voice_hygiene">להלן רשימת התנהגויות עליהם תקבל התראה:</string>
    <string name="description_theoretical_background">ברוכים הבאים לרקע תאורטי</string>
    <string name="title_link_theoretical_background">הסבר בסרטון</string>
    <string name="description_link_theoretical_background">יש לצפות בסרטון להסבר על התנהגות הקול:</string>
    <string name="pdf_title_theoreticalBackground">רשימת משימות</string>
    <string name="description_pdf_theoreticalBackground">להלן רשימת משימות שעליך לבצע:</string>
    <string name="description_exercises">לביצוע שעורי הבית עליכם לעשות את התרגילים של שתי הקטגוריות הבאות:</string>
    <string name="relaxation">הרפייה</string>
    <string name="breathing">נשימה</string>
    <string name="title_activity_breathing">נשימה</string>
    <string name="title_activity_relaxation">הרפייה</string>
    <string name="description_relaxation">התרגילים הבאים מומלצים לפני שימוש אינטנסיבי בקול. מדובר בחימום הגוף ומיתרי הקול לשם הכנתם לדיבור ממושך או יותר מאומץ. התרגילים מומלצים גם לפני ביצוע תרגילי הקול של הטיפול.
מובאים התרגילים העיקריים בלבד. ניתן להוסיף תרגילי מתיחה והרפיה שונים במידת הצורך, אך מומלץ לבצע לפחות את הבאים.
לסיום לחץ "סיום".
</string>
    <string name="description_breathing">בכל תרגילי הנשימה יש לזכור את על הטיפים שלעיל. להלן סיכום קצר של התחושות העיקריות שצריכות להיות:  -\tבנשימה (אוויר נכנס): בטן מתמלאת ויוצאת החוצה (תחושה של בלון)  -\tבשאיפה (אוויר יוצא): בטן נכנסת פנימה לאט  -\tבית חזה וכתפיים בכלל לא מעורבים ולא זזים  -\tגרון רפוי ולא עוצר את האוויר כלל להלן רשימת תרגילי נשימה עם העלאה בדרגות הקושי:</string>
    <string name="button_pdf">פתח קובץ מצורף</string>
    <string name="app_name" translatable="false">appVoice</string>
    <string name="title_activity_exercise_list">ExerciseListActivity</string>
    <string name="title_activity_task_exercise">TaskExerciseActivity</string>
    <string name="folders">תקיות</string>
    <string name="messages">הודעות</string>
    <string name="account">חשבון שלי</string>
    <string name="title_activity_messages">MessagesActivity</string>
    <string name="title_activity_account">AccountActivity</string>
    <string name="list_exercises">להלן רשימת התרגילים עליכם לבצע:</string>
    <string name="done">משימות בוצעו</string>
    <string name="address">כתובת</string>
    <string name="phone">מספר טלפון</string>
    <string name="hmo">קופת חולים</string>
    <string name="mail">מייל</string>
    <string name="therapist">קלינאית תקשורת</string>
    <string name="contact">צור קשר</string>
    <string name="update">עדכן פרטים</string>
    <string name="save">שמור</string>
    <string name="newMessage">הודעה חדשה</string>
    <string name="title_activity_new_message">NewMessageActivity</string>
    <string name="newMessageTo">הודעה חדשה עבור:</string>
    <string name="send_message">שלח הודעה</string>
    <string name="title_activity_camera_recorder">CameraRecorder</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="do_exercise">בצע תרגיל</string>
    <string name="do_video">בצע תרגיל עם הקלטת וידאו</string>
    <string name="do_file">פתח קובץ מצורף</string>
    <string name="title_activity_exercise_video">ExerciseVideoActivity</string>
    <string name="do_link">סרטון הדרכה</string>
    <string name="title_activity_message">MessageActivity</string>
    <string name="reply">הגב</string>
    <string name="messageFrom">הודעה מאת:</string>
    <string name="messageDate">תאריך:</string>

</resources>
