<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sarah.myproject.Activities.ExerciseListActivity"
    android:orientation="vertical">

    <!--Title-->
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            style="@style/Title"
            android:id="@+id/folderTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#956762bf"
            />
    </LinearLayout>

    <!--Description VoiceHygiene-->
    <LinearLayout
        style="@style/LinearStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Description"
            android:id="@+id/folderDescription"
            android:text="@string/description_voice_hygiene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </LinearLayout>

    <!--PDF List-->
    <LinearLayout
        style="@style/LinearStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Title-->
        <TextView
            style="@style/Subtitle"
            android:id="@+id/title_pdf_voiceHygiene"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pdf_title_voice_hygiene"
            />
        <!--Description-->
        <TextView
            style="@style/SubDescription"
            android:id="@+id/description_pdf_voiceHygiene"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description_pdf_voice_hygiene"
            />

        <!--List-->
        <ListView
            android:id="@+id/exerciseList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </ListView>

        <Button
            android:id="@+id/button_test_pdf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_pdf"
            android:onClick="onClick_button_test_pdf"
            android:visibility="invisible"
            />

    </LinearLayout>

    <!--Notification List-->
    <LinearLayout
        style="@style/LinearStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Title-->
        <TextView
            style="@style/Subtitle"
            android:id="@+id/title_notification_voiceHygiene"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_notification_voice_hygiene"
            />
        <!--Description-->
        <TextView
            style="@style/SubDescription"
            android:id="@+id/description_notification_voiceHygiene"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description_notification_voice_hygiene"
            />

        <!--List-->
        <ListView
            android:id="@+id/listView_notification_voiceHygiene"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </ListView>
    </LinearLayout>
</LinearLayout>
    <!--</ScrollView>-->

