<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MyProject"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/welcome"
        android:id="@+id/welcome"
        android:layout_centerHorizontal="true"
        style="@style/AppTheme"
        android:textSize="40dp" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:orientation="vertical"
    android:layout_alignParentBottom="true">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:drawablePadding="80dp"
        android:id="@+id/userName"
        android:layout_above="@+id/password"
        android:layout_centerHorizontal="true"
        />
    <!-- android:drawableLeft="@drawable/ic_action_person" -->

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:hint="@string/password"
        android:drawablePadding="8dp"
        android:id="@+id/password"
        android:password="true"
        android:layout_above="@+id/button"
        android:layout_centerHorizontal="true" />
    <!--    android:drawableLeft="@drawable/ic_action_accounts"-->

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:id="@+id/button"
        android:layout_marginBottom="129dp"
        android:layout_alignParentBottom="true"
        android:onClick="login_button"/>
    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/welcome"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="98dp"
        android:src="@drawable/pink_home" />


</RelativeLayout>