<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sarah.myproject.Activities.ExercisesActivity"
    android:orientation="vertical">

    <!--Title-->
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            style="@style/Title"
            android:id="@+id/welcome_exercises"
            android:text="@string/exercise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ff78c8ff"
            />
    </LinearLayout>

    <!--Description Exercises-->
    <LinearLayout
        style="@style/LinearStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Description"
            android:id="@+id/description_exercise"
            android:text="@string/description_exercises"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </LinearLayout>


    <!--Buttons-->
    <LinearLayout
        style="@style/Folder"
        android:id="@+id/linearLayout_buttons_exercise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_centerVertical="true"
        android:layout_margin="0dp"
        >

        <Button
            style="@style/Folder"
            android:id="@+id/button_exercise1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#a1ff2d27"
            android:text="@string/relaxation"
            android:layout_margin="10dp"
            android:onClick="onClick_button1"
            />

        <Button
            style="@style/Folder"
            android:id="@+id/button_exercise2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#a1ffcd1e"
            android:text="@string/breathing"
            android:layout_margin="10dp"
            android:onClick="onClick_button2"/>

    </LinearLayout>
</LinearLayout>
