<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--android:id="@+id/scrollview"-->
<!--android:layout_width="fill_parent"-->
<!--android:layout_height="wrap_content">-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.sarah.myproject.Activities.TheoreticalBackgroundActivity">

    <!--Title-->
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            style="@style/Title"
            android:id="@+id/welcome_theoreticalBackground"
            android:text="@string/theory"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#96bb604c"
            />
    </LinearLayout>

    <!--Description TheoreticalBackground-->
    <LinearLayout
        style="@style/LinearStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Description"
            android:id="@+id/description_theoreticalBackground"
            android:text="@string/description_theoretical_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
    </LinearLayout>

    <!--Link Youtube-->
    <LinearLayout
        style="@style/LinearStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Title Link-->
        <TextView
            style="@style/Subtitle"
            android:id="@+id/title_youtube_theoreticalBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_link_theoretical_background"
            />
        <!--Description Link-->
        <TextView
            style="@style/SubDescription"
            android:id="@+id/description_youtube_theoreticalBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description_link_theoretical_background"
            />

        <!--Link Youtube-->
        <!--<VideoView-->
            <!--android:id="@+id/link_youtube"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--/>-->


        <!--Button Link Video Youtube-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center">


            <!--<Button-->
                <!--android:id="@+id/button_video"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Button Video"-->
                <!--android:onClick="true"-->
            <!--/>-->
            <ImageButton
                android:id="@+id/button_video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/play_video_button_youtube"
                android:clickable="true"
                 />

        </LinearLayout>
    </LinearLayout>

    <!--PDF List-->
    <LinearLayout
        style="@style/LinearStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Title-->
        <TextView
            style="@style/Subtitle"
            android:id="@+id/title_pdf_theoreticalBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pdf_title_theoreticalBackground"
            />
        <!--Description-->
        <TextView
            style="@style/SubDescription"
            android:id="@+id/description_pdf_theoreticalBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/description_pdf_theoreticalBackground"
            />

        <!--List-->
        <ListView
            android:id="@+id/listView_pdf_theoreticalBackground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

        </ListView>
    </LinearLayout>

</LinearLayout>
<!--</ScrollView>-->