<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:overScrollMode="ifContentScrolls"
    tools:context="com.example.sarah.myproject.Activities.VoiceHygieneActivity"
    android:orientation="vertical">

    <!--Title-->
    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:id="@+id/welcome_voiceHygiene"
            android:text="@string/voice_hygiene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="40sp"

        />
    </LinearLayout>

    <!--Description VoiceHygiene-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/description_voiceHygiene"
            android:text="@string/description_voice_hygiene"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"

            />
    </LinearLayout>

    <!--PDF List-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!--Description-->
        <TextView
            android:id="@+id/pdfList_voiceHygiene"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/pdfList_description_voiceHygiene"
            />

        <!--List-->
        <ListView
            android:id="@+id/listView_voiceHygiene"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            </ListView>
    </LinearLayout>

</LinearLayout>
