<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/pencils_light"
    tools:context="com.example.sarah.myproject.Activities.NewMessageActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:gravity="center">


        <TextView
            style="@style/Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newMessage" />




    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            style="@style/Description"
            android:id="@+id/therapist_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            />
        <TextView
            style="@style/Description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="@string/newMessageTo"
            android:textDirection="rtl"
            android:textColor="@color/darkGrayText"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        >

       <FrameLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:background="@color/whiteBackground"
           >
        <!--<EditText-->
            <!--android:id="@+id/edtInput"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_weight="5"-->
            <!--android:hint="@string/user_name"-->
            <!--android:inputType="textCapSentences|textMultiLine"-->
            <!--android:maxLength="2000"-->
            <!--android:maxLines="4" />-->

           <EditText
               android:inputType="textMultiLine"
               android:textColor="@color/darkGrayText"
               android:id="@+id/message_editText"
           android:lines="8"
           android:minLines="6"
           android:gravity="top|left"
           android:maxLines="10"
           android:layout_height="wrap_content"
           android:layout_width="fill_parent"
           android:scrollbars="vertical"
           />
       </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_message"
            android:id="@+id/button_sendMessage"
            android:onClick="onClick_sendMessage"/>
    </LinearLayout>

    <!-- Progress Bar -->
    <LinearLayout
        android:id="@+id/ProgressBar"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/marker_progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:indeterminate="true" />

    </LinearLayout>
</LinearLayout>
