<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.sarah.myproject.Activities.MessageActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Progress Bar -->
        <LinearLayout
            android:id="@+id/ProgressBar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <ProgressBar
                android:id="@+id/marker_progress"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:indeterminate="true" />

        </LinearLayout>

        <!--Title-->
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">

            <TextView
                android:id="@+id/messageFrom"
                style="@style/Folder"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                style="@style/Folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messageFrom"
                />


        </LinearLayout>

        <!-- Date -->
        <LinearLayout

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="right">

            <TextView
                android:id="@+id/messageDate"
                style="@style/Folder"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />
            <TextView
                style="@style/Folder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/messageDate"
                />


        </LinearLayout>
        <!--Description -->
        <LinearLayout
            style="@style/LinearStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:id="@+id/messageText"
                style="@style/Description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scrollbars="vertical"

                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/button_tasks_done"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:background="@android:color/holo_blue_bright"
                    android:gravity="center"
                    android:onClick="onClick_reply"
                    android:text="@string/reply" />
            </RelativeLayout>
        </LinearLayout>

    </LinearLayout>
</LinearLayout>

